Bevel weights are not stored in a new file created with r. 2.66 #34449

Closed
opened 2013-02-26 20:05:17 +01:00 by Witold Jaworski · 3 comments

%%%--- Operating System, Graphics card ---
Windows XP, Intel Integrated

- Blender version with error, and version that worked ---

r54697 (official 2.66)

- Short description of error ---

Cannot set bevel weights in a Blender file created with Blender 2.66 (for example for the edges of the default cube mesh).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The file bevel_weights-2.64.blend was created in Blender 2.64, and its mesh has the Bevel weights applied.
In Blender 2.66 everything works properly here: you can Tag Bevel other edges, or remove this mark from the others. It works also on the newly created mesh.
(see first picture in the enclosed *.PDF file)

The file bevel_weights-2.66.blend was created in Blender 2.66. You cannot set the bevel weights here - neither with the Tag Bevel, nor in the Outliner.
(see second picture in the enclosed *.PDF file)

%%%

%%%--- Operating System, Graphics card --- Windows XP, Intel Integrated - Blender version with error, and version that worked --- r54697 (official 2.66) - Short description of error --- Cannot set bevel weights in a Blender file created with Blender 2.66 (for example for the edges of the default cube mesh). - Steps for others to reproduce the error (preferably based on attached .blend file) --- The file bevel_weights-2.64.blend was created in Blender 2.64, and its mesh has the Bevel weights applied. In Blender 2.66 everything works properly here: you can Tag Bevel other edges, or remove this mark from the others. It works also on the newly created mesh. (see first picture in the enclosed *.PDF file) The file bevel_weights-2.66.blend was created in Blender 2.66. You cannot set the bevel weights here - neither with the Tag Bevel, nor in the Outliner. (see second picture in the enclosed *.PDF file) %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r54900.%%%

%%%fixed r54900.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34449
No description provided.