fix for own regression, edge path tagging worked but toggline bevel didnt. reported as bug [#34449]